--- a/seguro-risco-de-engenharia.html
+++ b/seguro-risco-de-engenharia.html
@@ -451,63 +451,93 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-0885bba elementor-widget elementor-widget-heading" data-id="0885bba" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h3 class="elementor-heading-title elementor-size-default">Preencha o Formulário</h3>		</div>
+					<h3 class="elementor-heading-title elementor-size-default">Preencha o Formulário</h3>		</div>
 				</div>
-				<div class="elementor-element elementor-element-8387295 elementor-button-align-end elementor-mobile-button-align-stretch elementor-widget elementor-widget-global elementor-global-217 elementor-widget-form" data-id="8387295" data-element_type="widget" data-settings="{&quot;step_next_label&quot;:&quot;Next&quot;,&quot;step_previous_label&quot;:&quot;Previous&quot;,&quot;button_width&quot;:&quot;100&quot;,&quot;step_type&quot;:&quot;number_text&quot;,&quot;step_icon_shape&quot;:&quot;circle&quot;}" data-widget_type="form.default">
+				<div class="elementor-element elementor-element-fcf842d elementor-button-align-end elementor-mobile-button-align-stretch elementor-widget elementor-widget-global elementor-global-217 elementor-widget-form" data-id="fcf842d" data-element_type="widget" data-settings="{&quot;step_next_label&quot;:&quot;Next&quot;,&quot;step_previous_label&quot;:&quot;Previous&quot;,&quot;button_width&quot;:&quot;100&quot;,&quot;step_type&quot;:&quot;number_text&quot;,&quot;step_icon_shape&quot;:&quot;circle&quot;}" data-widget_type="form.default">
 				<div class="elementor-widget-container">
 			<style>/*! elementor-pro - v3.19.0 - 29-01-2024 */
 .elementor-button.elementor-hidden,.elementor-hidden{display:none}.e-form__step{width:100%}.e-form__step:not(.elementor-hidden){display:flex;flex-wrap:wrap}.e-form__buttons{flex-wrap:wrap}.e-form__buttons,.e-form__buttons__wrapper{display:flex}.e-form__indicators{display:flex;justify-content:space-between;align-items:center;flex-wrap:nowrap;font-size:13px;margin-bottom:var(--e-form-steps-indicators-spacing)}.e-form__indicators__indicator{display:flex;flex-direction:column;align-items:center;justify-content:center;flex-basis:0;padding:0 var(--e-form-steps-divider-gap)}.e-form__indicators__indicator__progress{width:100%;position:relative;background-color:var(--e-form-steps-indicator-progress-background-color);border-radius:var(--e-form-steps-indicator-progress-border-radius);overflow:hidden}.e-form__indicators__indicator__progress__meter{width:var(--e-form-steps-indicator-progress-meter-width,0);height:var(--e-form-steps-indicator-progress-height);line-height:var(--e-form-steps-indicator-progress-height);padding-right:15px;border-radius:var(--e-form-steps-indicator-progress-border-radius);background-color:var(--e-form-steps-indicator-progress-color);color:var(--e-form-steps-indicator-progress-meter-color);text-align:right;transition:width .1s linear}.e-form__indicators__indicator:first-child{padding-left:0}.e-form__indicators__indicator:last-child{padding-right:0}.e-form__indicators__indicator--state-inactive{color:var(--e-form-steps-indicator-inactive-primary-color,#c2cbd2)}.e-form__indicators__indicator--state-inactive [class*=indicator--shape-]:not(.e-form__indicators__indicator--shape-none){background-color:var(--e-form-steps-indicator-inactive-secondary-color,#fff)}.e-form__indicators__indicator--state-inactive object,.e-form__indicators__indicator--state-inactive svg{fill:var(--e-form-steps-indicator-inactive-primary-color,#c2cbd2)}.e-form__indicators__indicator--state-active{color:var(--e-form-steps-indicator-active-primary-color,#39b54a);border-color:var(--e-form-steps-indicator-active-secondary-color,#fff)}.e-form__indicators__indicator--state-active [class*=indicator--shape-]:not(.e-form__indicators__indicator--shape-none){background-color:var(--e-form-steps-indicator-active-secondary-color,#fff)}.e-form__indicators__indicator--state-active object,.e-form__indicators__indicator--state-active svg{fill:var(--e-form-steps-indicator-active-primary-color,#39b54a)}.e-form__indicators__indicator--state-completed{color:var(--e-form-steps-indicator-completed-secondary-color,#fff)}.e-form__indicators__indicator--state-completed [class*=indicator--shape-]:not(.e-form__indicators__indicator--shape-none){background-color:var(--e-form-steps-indicator-completed-primary-color,#39b54a)}.e-form__indicators__indicator--state-completed .e-form__indicators__indicator__label{color:var(--e-form-steps-indicator-completed-primary-color,#39b54a)}.e-form__indicators__indicator--state-completed .e-form__indicators__indicator--shape-none{color:var(--e-form-steps-indicator-completed-primary-color,#39b54a);background-color:initial}.e-form__indicators__indicator--state-completed object,.e-form__indicators__indicator--state-completed svg{fill:var(--e-form-steps-indicator-completed-secondary-color,#fff)}.e-form__indicators__indicator__icon{width:var(--e-form-steps-indicator-padding,30px);height:var(--e-form-steps-indicator-padding,30px);font-size:var(--e-form-steps-indicator-icon-size);border-width:1px;border-style:solid;display:flex;justify-content:center;align-items:center;overflow:hidden;margin-bottom:10px}.e-form__indicators__indicator__icon img,.e-form__indicators__indicator__icon object,.e-form__indicators__indicator__icon svg{width:var(--e-form-steps-indicator-icon-size);height:auto}.e-form__indicators__indicator__icon .e-font-icon-svg{height:1em}.e-form__indicators__indicator__number{width:var(--e-form-steps-indicator-padding,30px);height:var(--e-form-steps-indicator-padding,30px);border-width:1px;border-style:solid;display:flex;justify-content:center;align-items:center;margin-bottom:10px}.e-form__indicators__indicator--shape-circle{border-radius:50%}.e-form__indicators__indicator--shape-square{border-radius:0}.e-form__indicators__indicator--shape-rounded{border-radius:5px}.e-form__indicators__indicator--shape-none{border:0}.e-form__indicators__indicator__label{text-align:center}.e-form__indicators__indicator__separator{width:100%;height:var(--e-form-steps-divider-width);background-color:#babfc5}.e-form__indicators--type-icon,.e-form__indicators--type-icon_text,.e-form__indicators--type-number,.e-form__indicators--type-number_text{align-items:flex-start}.e-form__indicators--type-icon .e-form__indicators__indicator__separator,.e-form__indicators--type-icon_text .e-form__indicators__indicator__separator,.e-form__indicators--type-number .e-form__indicators__indicator__separator,.e-form__indicators--type-number_text .e-form__indicators__indicator__separator{margin-top:calc(var(--e-form-steps-indicator-padding, 30px) / 2 - var(--e-form-steps-divider-width, 1px) / 2)}.elementor-field-type-hidden{display:none}.elementor-field-type-html{display:inline-block}.elementor-field-type-tel input{direction:inherit}.elementor-login .elementor-lost-password,.elementor-login .elementor-remember-me{font-size:.85em}.elementor-field-type-recaptcha_v3 .elementor-field-label{display:none}.elementor-field-type-recaptcha_v3 .grecaptcha-badge{z-index:1}.elementor-button .elementor-form-spinner{order:3}.elementor-form .elementor-button>span{display:flex;justify-content:center;align-items:center}.elementor-form .elementor-button .elementor-button-text{white-space:normal;flex-grow:0}.elementor-form .elementor-button svg{height:auto}.elementor-form .elementor-button .e-font-icon-svg{height:1em}.elementor-select-wrapper .select-caret-down-wrapper{position:absolute;top:50%;transform:translateY(-50%);inset-inline-end:10px;pointer-events:none;font-size:11px}.elementor-select-wrapper .select-caret-down-wrapper svg{display:unset;width:1em;aspect-ratio:unset;fill:currentColor}.elementor-select-wrapper .select-caret-down-wrapper i{font-size:19px;line-height:2}.elementor-select-wrapper.remove-before:before{content:""!important}</style>		<form class="elementor-form" method="post" name="New Form">
-			<input type="hidden" name="post_id" value="710"/>
-			<input type="hidden" name="form_id" value="8387295"/>
-			<input type="hidden" name="referer_title" value="Seguro Risco de Engenharia" />
+			<input type="hidden" name="post_id" value="494"/>
+			<input type="hidden" name="form_id" value="fcf842d"/>
+			<input type="hidden" name="referer_title" value="" />
 
-							<input type="hidden" name="queried_id" value="710"/>
 			
-			<div class="elementor-form-fields-wrapper elementor-labels-">
-								<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-name elementor-col-100 elementor-field-required">
-												<label for="form-field-name" class="elementor-field-label elementor-screen-only">
-								Nome Completo							</label>
-														<input size="1" type="text" name="form_fields[name]" id="form-field-name" class="elementor-field elementor-size-sm  elementor-field-textual" placeholder="Nome Completo" required="required" aria-required="true">
-											</div>
-								<div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-field_eb4e9d0 elementor-col-100 elementor-field-required">
-												<label for="form-field-field_eb4e9d0" class="elementor-field-label elementor-screen-only">
-								Telefone com DDD							</label>
-														<input size="1" type="text" name="form_fields[field_eb4e9d0]" id="form-field-field_eb4e9d0" class="elementor-field elementor-size-sm  elementor-field-textual" placeholder="Telefone com DDD" required="required" aria-required="true">
-											</div>
-								<div class="elementor-field-type-email elementor-field-group elementor-column elementor-field-group-email elementor-col-100 elementor-field-required">
-												<label for="form-field-email" class="elementor-field-label elementor-screen-only">
-								Seu melhor e-mail							</label>
-														<input size="1" type="email" name="form_fields[email]" id="form-field-email" class="elementor-field elementor-size-sm  elementor-field-textual" placeholder="Seu melhor e-mail" required="required" aria-required="true">
-											</div>
-								<div class="elementor-field-type-select elementor-field-group elementor-column elementor-field-group-field_2d98c5d elementor-col-100 elementor-field-required">
-												<label for="form-field-field_2d98c5d" class="elementor-field-label elementor-screen-only">
-								Selecione o produto							</label>
-								<div class="elementor-field elementor-select-wrapper remove-before ">
-			<div class="select-caret-down-wrapper">
-				<i aria-hidden="true" class="eicon-caret-down"></i>			</div>
-			<select name="form_fields[field_2d98c5d]" id="form-field-field_2d98c5d" class="elementor-field-textual elementor-size-sm" required="required" aria-required="true">
-									<option value="Selecione o produto">Selecione o produto</option>
-									<option value="Seguros Compreensivos">Seguros Compreensivos</option>
-									<option value="Seguros Riscos de Engenharia">Seguros Riscos de Engenharia</option>
-									<option value="Seguros Riscos Diversos">Seguros Riscos Diversos</option>
-									<option value="Seguro Transporte">Seguro Transporte</option>
-									<option value="Seguro Responsabilidade Civil">Seguro Responsabilidade Civil</option>
-									<option value="Seguro Automóvel">Seguro Automóvel</option>
-									<option value="Seguro de Vida">Seguro de Vida</option>
-							</select>
-		</div>
-						</div>
-								<div class="elementor-field-type-textarea elementor-field-group elementor-column elementor-field-group-message elementor-col-100">
-												<label for="form-field-message" class="elementor-field-label elementor-screen-only">
-								Mensagem							</label>
-						<textarea class="elementor-field-textual elementor-field  elementor-size-sm" name="form_fields[message]" id="form-field-message" rows="4" placeholder="Mensagem"></textarea>				</div>
-								<div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
-					<button type="submit" class="elementor-button elementor-size-sm">
-						<span >
-															<span class=" elementor-button-icon">
-																										</span>
-																						<span class="elementor-button-text">Enviar mensagem</span>
-													</span>
+			
+			
+			<form id="myForm">
+    <input type="hidden" name="queried_id" value="494"/>
+
+    <div class="elementor-form-fields-wrapper elementor-labels-">
+        <div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-name elementor-col-100 elementor-field-required">
+            <label for="form-field-name" class="elementor-field-label elementor-screen-only">Nome Completo</label>
+            <input size="1" type="text" name="form_fields[name]" id="form-field-name" class="elementor-field elementor-size-sm elementor-field-textual" placeholder="Nome Completo" required="required" aria-required="true">
+        </div>
+
+        <div class="elementor-field-type-text elementor-field-group elementor-column elementor-field-group-field_eb4e9d0 elementor-col-100 elementor-field-required">
+            <label for="form-field-field_eb4e9d0" class="elementor-field-label elementor-screen-only">Telefone com DDD</label>
+            <input size="1" type="text" name="form_fields[field_eb4e9d0]" id="form-field-field_eb4e9d0" class="elementor-field elementor-size-sm elementor-field-textual" placeholder="Telefone com DDD" required="required" aria-required="true">
+        </div>
+
+        <div class="elementor-field-type-email elementor-field-group elementor-column elementor-field-group-email elementor-col-100 elementor-field-required">
+            <label for="form-field-email" class="elementor-field-label elementor-screen-only">Seu melhor e-mail</label>
+            <input size="1" type="email" name="form_fields[email]" id="form-field-email" class="elementor-field elementor-size-sm elementor-field-textual" placeholder="Seu melhor e-mail" required="required" aria-required="true">
+        </div>
+
+        <div class="elementor-field-type-select elementor-field-group elementor-column elementor-field-group-field_2d98c5d elementor-col-100 elementor-field-required">
+            <label for="form-field-field_2d98c5d" class="elementor-field-label elementor-screen-only">Selecione o produto</label>
+            <div class="elementor-field elementor-select-wrapper remove-before">
+                <div class="select-caret-down-wrapper">
+                    <i aria-hidden="true" class="eicon-caret-down"></i>
+                </div>
+                <select name="form_fields[field_2d98c5d]" id="form-field-field_2d98c5d" class="elementor-field-textual elementor-size-sm" required="required" aria-required="true">
+                    <option value="Selecione o produto">Selecione o produto</option>
+                    <option value="Seguros Compreensivos">Seguros Compreensivos</option>
+                    <option value="Seguros Riscos de Engenharia">Seguros Riscos de Engenharia</option>
+                    <option value="Seguros Riscos Diversos">Seguros Riscos Diversos</option>
+                    <option value="Seguro Transporte">Seguro Transporte</option>
+                    <option value="Seguro Responsabilidade Civil">Seguro Responsabilidade Civil</option>
+                    <option value="Seguro Automóvel">Seguro Automóvel</option>
+                    <option value="Seguro de Vida">Seguro de Vida</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="elementor-field-type-textarea elementor-field-group elementor-column elementor-field-group-message elementor-col-100">
+            <label for="form-field-message" class="elementor-field-label elementor-screen-only">Mensagem</label>
+            <textarea class="elementor-field-textual elementor-field elementor-size-sm" name="form_fields[message]" id="form-field-message" rows="4" placeholder="Mensagem"></textarea>
+        </div>
+
+        <div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
+            <button type="button" onclick="enviarParaWhatsApp()">Enviar mensagem</button>
+        </div>
+    </div>
+</form>
+
+<script>
+    function enviarParaWhatsApp() {
+        var name = document.getElementById("form-field-name").value;
+        var phone = document.getElementById("form-field-field_eb4e9d0").value;
+        var email = document.getElementById("form-field-email").value;
+        var product = document.getElementById("form-field-field_2d98c5d").value;
+        var message = document.getElementById("form-field-message").value;
+
+        var whatsappMessage = `
+            Olá! 😊
+            Nome: ${name}
+            Telefone: ${phone}
+            E-mail: ${email}
+            Produto Selecionado: ${product}
+            Mensagem: ${message}
+            
+            Estou interessado(a) em obter mais informações sobre o seguro. Pode me ajudar?
+            
+            Obrigado!
+        `;
+
+        var encodedMessage = encodeURIComponent(whatsappMessage);
+        window.location.href = "https://api.whatsapp.com/send?phone=5511986459897&text=" + encodedMessage;
+    }
+</script>
 					</button>
 				</div>
 			</div>
